# ccs

./: .gitignore  Cargo.toml  README.md  model_config
.github/workflows/: release.yml
src/: config.rs  main.rs  preview.rs  tui.rs
