[package]
name = "ccs"
version = "0.2.0"
edition = "2021"
description = "Claude Code Profile Switcher — grouped profile management for API proxy services (sub2api)"
license = "MIT"
repository = "https://github.com/lywa1998/ccs"
readme = "README.md"

[[bin]]
name = "ccs"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
